# RustProject

./: .gitignore
backend/: .gitignore  Cargo.toml
backend/migrations/2024-05-28-162720_create_users/: up.sql
backend/migrations/2024-06-26-210829_update_users/: up.sql
backend/src/: db.rs  main.rs  schema.rs
backend/src/models/: user.rs  users.rs
backend/src/routes/: mod.rs  user.rs
