[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
juniper = "0.15.8"
juniper_actix = "0.5.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "0.8"
env_logger = "0.10"
log = "0.4"
